style.css
/* ... */
.button-icon{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: transparent;
    width: 43px;
    font-family: 'Inter', sans-serif;
    border: 1px solid #0C8CE9;
    color: #0C8CE9;
    padding: 5px 5px;
    font-size: 14px;
    border-radius: 4px;
    cursor: pointer;
    margin-left: 10px;
    margin-right: 20px;

    transition: transform 0.2s; 
}

 h3{
    color:#474747;
}



input {
    padding: 10px;
    width: 350px;
    font-size: 14px;
    border-radius: 5px;
    height:43px;
    border: 2px solid #eaeaea;
    box-sizing: border-box;
    outline: none;
}

input:focus {
    border: 2px solid #0C8CE9;
}


#hero-email{
    border: 1px solid rgb(196, 196, 196);
}

#hero-email::placeholder {
    
    color: rgb(196, 196, 196); /* Change the color to your desired value */
}
.navbar {
    font-family: 'Inter', sans-serif;
    font-size: 14px;
    list-style: none;
    padding: 0;
    background-color: white;
    width:100%;
   margin:0%;
   height:60px;
   border: 1px solid rgb(233, 233, 233);
    display: flex;
    align-items: center;
    justify-content: space-between;
    position:fixed;
    top:0px;
    z-index: 2;
    
}
.navbar-center{
    display: flex;justify-content:space-between;flex-direction:row;
}
@media screen and (max-width: 700px) {
.navbar-center{
    display:none;
}
}

.navbar li {
    margin: 0;
    align-self: center;
}

.navbar a {
    align-self: center;
    display: block;
    padding: 15px 20px;
    text-decoration: none;
    color: #2e2e2e;
}

.navbar a:hover {
    color:#0C8CE9;
}

.container-hero{
    align-items: center;
    display:flex;
    justify-content: center;
    background-color: transparent;
   height:900px;
   width:100%;
   margin-bottom:50px;
   background-image: url('images/blocky-pc-upscaled\ 1.png');
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.1); /* Dark overlay color */
 
   
}
.overlay{
    position:absolute;
    background-color: rgba(0, 0, 0, 0.8);
    height: 900px;
    width:100%;
}
.hero-center{
    
    align-items: center;
    display: flex;
    flex-direction: column;
    
}
.hero-name{
    font-family: 'Inter', sans-serif;
    font-size: 48px;
    font-weight: 800;
    color:rgb(255, 255, 255);    
    
    white-space: nowrap;
    overflow: hidden;
    border-right:2px solid rgb(255, 255, 255); /* This creates a cursor effect */
    animation: typing 2s steps(40, end), blink-caret 0.75s step-end infinite;
}

@keyframes typing {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

@keyframes erasing {
    from {
        width: 100%;
    }
    to {
        width: 0;
    }
}
@keyframes blink-caret {
    from,
    to {
        border-color: transparent;
    }
    50% {
        border-color:rgb(255, 255, 255);
    }
}
.hero-role{
    
    font-size: 14px;
    font-weight: 400;
    text-transform: uppercase;
    font-weight: 700;
    margin-bottom: 10px;
    color:#0C8CE9;
    text-shadow: 0px 0px 14px rgba(26, 98, 231, 0.7);

    
}
.hero-profile{
    background: linear-gradient(45deg, #F8F8F8, #E8DDD5,#ccdeeb);
    border:1px solid #0C8CE9;
    width:100px;
    height:100px;
    border-radius: 100px;
    background-color: white;
    margin-bottom:25px;
}
#hero-email{
    font-family: 'Inter', sans-serif;
    
    background-color: white;
    color:rgb(34, 34, 34);
    display:inline-block;
    
}
.container{
    margin:0;
    background-color: rgb(255, 255, 255);
    margin:0px;
    font-family: 'Inter', sans-serif;
    justify-content: center;
    align-items: center;
    display:flex;
    flex-direction: column;
}
.container-blog{
    margin-bottom:50px;
    justify-content: center;
    align-items: center;
    display: grid;
    grid-template-columns: 500px 500px;
    gap: 50px;
    
}
@media screen and (max-width: 700px) {
    .container-blog{
       
        grid-template-columns:  500px;
       
    }
    .work-wrapper{
        grid-template-columns: 350px;
    }
}

.blog-card{
    display:flex;
    justify-content: space-between;
    flex-direction: column;
    position:relative;
    border-radius: 3px;
    width:500px;
    height:600px;
    background-color: rgb(255, 255, 255);
    box-shadow: 0px 5px 10px rgba(26, 26, 26, 0.1);
    transition: box-shadow 0.1s ease;
    cursor: pointer;
    transition: transform 0.3s;
}
.blog-card:hover{
    transform: scale(1.02);
    box-shadow: 0px 10px 10px rgba(26, 26, 26, 0.1);
}
.blog-wrapper{
    margin-top:25px;
    padding:20px;
   
    
}
.blog-image{
    background-image: url('https://th.bing.com/th/id/OIP.HbSA_uUngKwYbOFFhkssQgHaFP?pid=ImgDet&rs=1');
    height:300px;
    width:100%;
    border-bottom: 1px solid #eaeaea;
    object-fit: cover;
    border-radius: 3px 3px 0px 0px;;
    
}
.blog-title{
    
    font-size: 21px;
    font-weight: 600;
    color:#474747;
    margin-bottom:20px;
}
.blog-description{
    font-size:14px;
    color:#777777;
    margin-bottom:25px;
}
.blog-button{
    font-size:12px;
    font-weight: 800;
    color:#0C8CE9;
    cursor: pointer;
    transition: color 0.3 ease;
}



.blog-date{
    font-size:12px;
   
    color:#adadad;
}
.blog-badge{
    font-family: 'Inter', sans-serif;
    width:auto;
    min-width: 30px;
    height:15px;
    padding:5px;
    text-align: center;
    display: flex;
    justify-content: center;
    border-radius: 15px;
    position:absolute;
    float:right;
    backdrop-filter: blur(10px);
    color:white;
    background-color: rgb(110, 110, 110,0.7);
    font-size:12px;
    top:0px;
    right:0px;
    margin:20px;
}

.blog-profile{
    background-image: url('images/cba.jpg');
    background-size: cover;
    border-radius: 50px;
    width:60px;
    height:60px;
    position:absolute;
    top:270px;
    left:20px;
    background-color: transparent;
}

.blog-wrapper-bottom{
    border-top: 1px solid #eaeaea;
  
    padding:15px 0px 15px 20px;
}
.container-header{
    width:1020px;
    margin-bottom:20px;
    align-items: center;
}
/* ... */

